src/qt/cbor/libqcbormap.bf

extension CQt
{
	[LinkName("QCborMap__Iterator_new")]
	public static extern void* QCborMap__Iterator_new(QCborMap__Iterator* other);
	[LinkName("QCborMap__Iterator_new2")]
	public static extern void* QCborMap__Iterator_new2();
	[LinkName("QCborMap__Iterator_new3")]
	public static extern void* QCborMap__Iterator_new3(QCborMap__Iterator* param1);
	[LinkName("QCborMap__Iterator_OperatorAssign")]
	public static extern void QCborMap__Iterator_OperatorAssign(void* c_this, QCborMap__Iterator* other);
	[LinkName("QCborMap__Iterator_OperatorMultiply")]
	public static extern void* QCborMap__Iterator_OperatorMultiply(void* c_this);
	[LinkName("QCborMap__Iterator_OperatorSubscript")]
	public static extern void* QCborMap__Iterator_OperatorSubscript(void* c_this, int32 j);
	[LinkName("QCborMap__Iterator_OperatorMinusGreater")]
	public static extern void* QCborMap__Iterator_OperatorMinusGreater(void* c_this);
	[LinkName("QCborMap__Iterator_OperatorMinusGreater2")]
	public static extern void* QCborMap__Iterator_OperatorMinusGreater2(void* c_this);
	[LinkName("QCborMap__Iterator_Key")]
	public static extern void QCborMap__Iterator_Key(void* c_this);
	[LinkName("QCborMap__Iterator_Value")]
	public static extern void QCborMap__Iterator_Value(void* c_this);
	[LinkName("QCborMap__Iterator_OperatorEqual")]
	public static extern bool QCborMap__Iterator_OperatorEqual(void* c_this, QCborMap__Iterator* o);
	[LinkName("QCborMap__Iterator_OperatorNotEqual")]
	public static extern bool QCborMap__Iterator_OperatorNotEqual(void* c_this, QCborMap__Iterator* o);
	[LinkName("QCborMap__Iterator_OperatorLesser")]
	public static extern bool QCborMap__Iterator_OperatorLesser(void* c_this, QCborMap__Iterator* other);
	[LinkName("QCborMap__Iterator_OperatorLesserOrEqual")]
	public static extern bool QCborMap__Iterator_OperatorLesserOrEqual(void* c_this, QCborMap__Iterator* other);
	[LinkName("QCborMap__Iterator_OperatorGreater")]
	public static extern bool QCborMap__Iterator_OperatorGreater(void* c_this, QCborMap__Iterator* other);
	[LinkName("QCborMap__Iterator_OperatorGreaterOrEqual")]
	public static extern bool QCborMap__Iterator_OperatorGreaterOrEqual(void* c_this, QCborMap__Iterator* other);
	[LinkName("QCborMap__Iterator_OperatorEqualWithQCborMapConstIterator")]
	public static extern bool QCborMap__Iterator_OperatorEqualWithQCborMapConstIterator(void* c_this, QCborMap__ConstIterator* o);
	[LinkName("QCborMap__Iterator_OperatorNotEqualWithQCborMapConstIterator")]
	public static extern bool QCborMap__Iterator_OperatorNotEqualWithQCborMapConstIterator(void* c_this, QCborMap__ConstIterator* o);
	[LinkName("QCborMap__Iterator_OperatorLesserWithOther")]
	public static extern bool QCborMap__Iterator_OperatorLesserWithOther(void* c_this, QCborMap__ConstIterator* other);
	[LinkName("QCborMap__Iterator_OperatorLesserOrEqualWithOther")]
	public static extern bool QCborMap__Iterator_OperatorLesserOrEqualWithOther(void* c_this, QCborMap__ConstIterator* other);
	[LinkName("QCborMap__Iterator_OperatorGreaterWithOther")]
	public static extern bool QCborMap__Iterator_OperatorGreaterWithOther(void* c_this, QCborMap__ConstIterator* other);
	[LinkName("QCborMap__Iterator_OperatorGreaterOrEqualWithOther")]
	public static extern bool QCborMap__Iterator_OperatorGreaterOrEqualWithOther(void* c_this, QCborMap__ConstIterator* other);
	[LinkName("QCborMap__Iterator_OperatorPlusPlus")]
	public static extern QCborMap__Iterator* QCborMap__Iterator_OperatorPlusPlus(void* c_this);
	[LinkName("QCborMap__Iterator_OperatorPlusPlusWithInt")]
	public static extern QCborMap__Iterator QCborMap__Iterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QCborMap__Iterator_OperatorMinusMinus")]
	public static extern QCborMap__Iterator* QCborMap__Iterator_OperatorMinusMinus(void* c_this);
	[LinkName("QCborMap__Iterator_OperatorMinusMinusWithInt")]
	public static extern QCborMap__Iterator QCborMap__Iterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	[LinkName("QCborMap__Iterator_OperatorPlusAssign")]
	public static extern QCborMap__Iterator* QCborMap__Iterator_OperatorPlusAssign(void* c_this, int32 j);
	[LinkName("QCborMap__Iterator_OperatorMinusAssign")]
	public static extern QCborMap__Iterator* QCborMap__Iterator_OperatorMinusAssign(void* c_this, int32 j);
	[LinkName("QCborMap__Iterator_OperatorPlus")]
	public static extern QCborMap__Iterator QCborMap__Iterator_OperatorPlus(void* c_this, int32 j);
	[LinkName("QCborMap__Iterator_OperatorMinus")]
	public static extern QCborMap__Iterator QCborMap__Iterator_OperatorMinus(void* c_this, int32 j);
	[LinkName("QCborMap__Iterator_OperatorMinusWithQCborMapIterator")]
	public static extern int32 QCborMap__Iterator_OperatorMinusWithQCborMapIterator(void* c_this, QCborMap__Iterator j);
	/// Delete this object from C++ memory
	[LinkName("QCborMap__Iterator_Delete")]
	public static extern void QCborMap__Iterator_Delete(void* self);
}
public class QCborMap__ConstIterator
{
	protected void* nativePtr;
	
	public this(QCborMap__ConstIterator* other)
	{
		this.nativePtr = CQt.QCborMap__ConstIterator_new(other);
	}
	
	public ~this()
	{
		CQt.QCborMap__ConstIterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QCborMap__ConstIterator* other)
	{
		CQt.QCborMap__ConstIterator_OperatorAssign(this.nativePtr, other);
	}
	
	public void* OperatorMultiply()
	{
		return CQt.QCborMap__ConstIterator_OperatorMultiply(this.nativePtr);
	}
	
	public void* OperatorSubscript(int32 j)
	{
		return CQt.QCborMap__ConstIterator_OperatorSubscript(this.nativePtr, j);
	}
	
	public void* OperatorMinusGreater()
	{
		return CQt.QCborMap__ConstIterator_OperatorMinusGreater(this.nativePtr);
	}
	
	public void Key()
	{
		CQt.QCborMap__ConstIterator_Key(this.nativePtr);
	}
	
	public void Value()
	{
		CQt.QCborMap__ConstIterator_Value(this.nativePtr);
	}
	
	public bool OperatorEqual(QCborMap__Iterator* o)
	{
		return CQt.QCborMap__ConstIterator_OperatorEqual(this.nativePtr, o);
	}
	
	public bool OperatorNotEqual(QCborMap__Iterator* o)
	{
		return CQt.QCborMap__ConstIterator_OperatorNotEqual(this.nativePtr, o);
	}
	
	public bool OperatorLesser(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorLesser(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqual(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorLesserOrEqual(this.nativePtr, other);
	}
	
	public bool OperatorGreater(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorGreater(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqual(QCborMap__Iterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorGreaterOrEqual(this.nativePtr, other);
	}
	
	public bool OperatorEqualWithQCborMapConstIterator(QCborMap__ConstIterator* o)
	{
		return CQt.QCborMap__ConstIterator_OperatorEqualWithQCborMapConstIterator(this.nativePtr, o);
	}
	
	public bool OperatorNotEqualWithQCborMapConstIterator(QCborMap__ConstIterator* o)
	{
		return CQt.QCborMap__ConstIterator_OperatorNotEqualWithQCborMapConstIterator(this.nativePtr, o);
	}
	
	public bool OperatorLesserWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorLesserWithOther(this.nativePtr, other);
	}
	
	public bool OperatorLesserOrEqualWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorLesserOrEqualWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorGreaterWithOther(this.nativePtr, other);
	}
	
	public bool OperatorGreaterOrEqualWithOther(QCborMap__ConstIterator* other)
	{
		return CQt.QCborMap__ConstIterator_OperatorGreaterOrEqualWithOther(this.nativePtr, other);
	}
	
	public QCborMap__ConstIterator* OperatorPlusPlus()
	{
		return CQt.QCborMap__ConstIterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public QCborMap__ConstIterator OperatorPlusPlusWithInt(int32 param1)
	{
		return CQt.QCborMap__ConstIterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public QCborMap__ConstIterator* OperatorMinusMinus()
	{
		return CQt.QCborMap__ConstIterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public QCborMap__ConstIterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QCborMap__ConstIterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
	public QCborMap__ConstIterator* OperatorPlusAssign(int32 j)
	{
		return CQt.QCborMap__ConstIterator_OperatorPlusAssign(this.nativePtr, j);
	}
	
	public QCborMap__ConstIterator* OperatorMinusAssign(int32 j)
	{
		return CQt.QCborMap__ConstIterator_OperatorMinusAssign(this.nativePtr, j);
	}
	
	public QCborMap__ConstIterator OperatorPlus(int32 j)
	{
		return CQt.QCborMap__ConstIterator_OperatorPlus(this.nativePtr, j);
	}
	
	public QCborMap__ConstIterator OperatorMinus(int32 j)
	{
		return CQt.QCborMap__ConstIterator_OperatorMinus(this.nativePtr, j);
	}
	
	public int32 OperatorMinusWithQCborMapConstIterator(QCborMap__ConstIterator j)
	{
		return CQt.QCborMap__ConstIterator_OperatorMinusWithQCborMapConstIterator(this.nativePtr, j);
	}
	
}
